WexGit/Wex_DX/force-app/main/default/objects/Spend_Detail__c/fields/FEP__c.field-meta.xml
<CustomField>
    <fullName>FEP__c</fullName>
    <label>FEP</label>
    <referenceTo>Virtual_FEP__c</referenceTo>
    <relationshipLabel>Spend Details</relationshipLabel>
    <relationshipName>Spend_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>