WexGit/Wex_DX/force-app/main/default/objects/Spend_Detail__c/fields/Of_Addressable_Spend__c.field-meta.xml
<CustomField>
    <fullName>Of_Addressable_Spend__c</fullName>
    <formula>IF(
FEP__r.Annual_Addressable_Spend__c &gt; 0,
Value__c / FEP__r.Annual_Addressable_Spend__c,
null
)</formula>
    <label>% Of Addressable Spend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>