WexGit/Wex_DX/force-app/main/default/objects/Spend_Detail__c/fields/Payment_Method_Of_Spend_Recorded__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method_Of_Spend_Recorded__c</fullName>
    <formula>Payment_Method_Value_Of_Spend_Recorded__c / Value__c</formula>
    <label>Payment Method % Of Spend Recorded</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>