WexGit/Wex_DX/force-app/main/default/objects/Spend_Detail__c/fields/Payment_Method_Value_Of_Spend_Recorded__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method_Value_Of_Spend_Recorded__c</fullName>
    <label>Payment Method Value Of Spend Recorded</label>
    <summarizedField>Payment_Method_Detail__c.Value_Of_Spend__c</summarizedField>
    <summaryForeignKey>Payment_Method_Detail__c.Spend_Detail__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>