WexGit/Wex_DX/force-app/main/default/objects/Spend_Detail__c/fields/Spend_Detail_Count__c.field-meta.xml
<CustomField>
    <fullName>Spend_Detail_Count__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Spend Detail Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>