WexGit/Wex_DX/force-app/main/default/objects/Spend_Detail__c/fields/Spend_Type__c.field-meta.xml
<CustomField>
    <fullName>Spend_Type__c</fullName>
    <label>Spend Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Industry__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Accommodation</fullName>
            </value>
            <value>
                <fullName>Airlines (Low Cost)</fullName>
            </value>
            <value>
                <fullName>Airlines (Scheduled)</fullName>
            </value>
            <value>
                <fullName>Car Rental</fullName>
            </value>
            <value>
                <fullName>Cruise Lines</fullName>
            </value>
            <value>
                <fullName>Entertainment</fullName>
            </value>
            <value>
                <fullName>Ferries</fullName>
            </value>
            <value>
                <fullName>Food &amp; Beverage</fullName>
            </value>
            <value>
                <fullName>Government Services</fullName>
            </value>
            <value>
                <fullName>Grocery &amp; Supermarkets</fullName>
            </value>
            <value>
                <fullName>Ground Transportation</fullName>
            </value>
            <value>
                <fullName>Hotels - Invoice</fullName>
            </value>
            <value>
                <fullName>Hotels - Reservation</fullName>
            </value>
            <value>
                <fullName>Rail (Freight)</fullName>
            </value>
            <value>
                <fullName>Rail (Travel)</fullName>
            </value>
            <value>
                <fullName>Tourist Attractions &amp; Exhibits</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Insurer</fullName>
            </value>
            <value>
                <fullName>Medical Providers</fullName>
            </value>
            <value>
                <fullName>Brokers</fullName>
            </value>
            <value>
                <fullName>Pharma</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>