WexGit/Wex_DX/force-app/main/default/objects/Spend_Detail__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <inlineHelpText>The amount that&apos;s being spent on this record&apos;s Spend Type</inlineHelpText>
    <label>Value Of Spend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>